--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-02 Thu 20:51 -->
+<!-- 2022-06-03 Fri 19:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,8 +55,12 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#697a3a77-89eb-4408-8cac-a5001e05daa2">index.hy</a></li>
-<li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#orgd4667c1">makefile</a></li>
+<li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a>
+<ul>
+<li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
+</ul>
+</li>
+<li><a href="#org101f040">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -252,12 +256,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orgf44a85c">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orge4b66a9">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org57eaeb2">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org424138d">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -266,23 +270,31 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">&lt;&lt;\EOF
+<pre><code class="language-sh match-braces rainbow-braces">&lt;&lt;\EOF # This is also a bootstrapping script! Check out &lt;a href="index.hy.syvl.org"&gt;the `hy' script&lt;/a&gt; and &lt;a href="index.sh.syvl.org"&gt;the `shell' script&lt;/a&gt; for more information.
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-html match-braces rainbow-braces">nil&lt;!--
+<pre><code class="language-html match-braces rainbow-braces">nil&lt;!-- This is where the site html goes.
 </code></pre>
 </div>
 
+<div class="org-src-container">
+<pre><code class="language-sh match-braces rainbow-braces">EOF # This is where the site html ends.
+</code></pre>
+</div>
+</div>
+
+<div id="outline-container-cca54aae-22bc-4c33-899f-67fa8ec2eb8e" class="outline-3">
+<h3 id="cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</h3>
+<div class="outline-text-3" id="text-cca54aae-22bc-4c33-899f-67fa8ec2eb8e">
 <p>
 For information on how to prompt when piping to <code>sh</code>, see <a href="https://unix.stackexchange.com/users/48083/graeme">Graeme's</a> answer <a href="https://unix.stackexchange.com/a/121255/270053">here</a>,
 and <a href="https://stackoverflow.com/users/2092245/ferhtgoldaraz">ferhtgoldaraz's</a> answer <a href="https://stackoverflow.com/a/15696250/10827766">here</a>.
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">EOF
-set -eo pipefail
+<pre><code class="language-sh match-braces rainbow-braces">set -eo pipefail
 bootstrap="$HOME/.local/share/syvl-bootstrap"
 </code></pre>
 </div>
@@ -342,10 +354,11 @@ fi
 </div>
 </div>
 </div>
+</div>
 
-<div id="outline-container-orgd4667c1" class="outline-2">
-<h2 id="orgd4667c1">makefile</h2>
-<div class="outline-text-2" id="text-orgd4667c1">
+<div id="outline-container-org101f040" class="outline-2">
+<h2 id="org101f040">makefile</h2>
+<div class="outline-text-2" id="text-org101f040">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -375,7 +388,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-02 Thu 20:51</p>
+<p class="date">Created: 2022-06-03 Fri 19:24</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
