--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<<\EOF # This is also a bootstrapping script! Check out <a href="index.hy.syvl.org">the `hy' script</a> and <a href="index.sh.syvl.org">the `shell' script</a> for more information.
+<<\EOF # This is also a bootstrapping script! Check out <a href="https://index.hy.syvl.org">the `hy' script</a> and <a href="https://index.sh.syvl.org">the `shell' script</a> for more information.
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-03 Fri 19:24 -->
+<!-- 2022-06-03 Fri 19:35 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -61,7 +61,7 @@
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#org101f040">makefile</a></li>
+<li><a href="#orgf77ee49">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -257,12 +257,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orge4b66a9">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orgfbdd9b3">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org424138d">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgfefc2cc">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -271,7 +271,7 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">&lt;&lt;\EOF # This is also a bootstrapping script! Check out &lt;a href="index.hy.syvl.org"&gt;the `hy' script&lt;/a&gt; and &lt;a href="index.sh.syvl.org"&gt;the `shell' script&lt;/a&gt; for more information.
+<pre><code class="language-sh match-braces rainbow-braces">&lt;&lt;\EOF # This is also a bootstrapping script! Check out &lt;a href="https://index.hy.syvl.org"&gt;the `hy' script&lt;/a&gt; and &lt;a href="https://index.sh.syvl.org"&gt;the `shell' script&lt;/a&gt; for more information.
 </code></pre>
 </div>
 
@@ -357,9 +357,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-org101f040" class="outline-2">
-<h2 id="org101f040">makefile</h2>
-<div class="outline-text-2" id="text-org101f040">
+<div id="outline-container-orgf77ee49" class="outline-2">
+<h2 id="orgf77ee49">makefile</h2>
+<div class="outline-text-2" id="text-orgf77ee49">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -389,7 +389,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-03 Fri 19:24</p>
+<p class="date">Created: 2022-06-03 Fri 19:35</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
