--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-03 Fri 19:35 -->
+<!-- 2022-06-03 Fri 22:39 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -60,7 +60,7 @@
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#orgf77ee49">makefile</a></li>
+<li><a href="#org76db5ea">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -256,12 +256,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orgfbdd9b3">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org87797c7">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgfefc2cc">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org9b63614">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -280,7 +280,8 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">EOF # This is where the site html ends.
+<pre><code class="language-sh match-braces rainbow-braces">EOF
+# This is where the site html ends.
 </code></pre>
 </div>
 </div>
@@ -356,9 +357,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-orgf77ee49" class="outline-2">
-<h2 id="orgf77ee49">makefile</h2>
-<div class="outline-text-2" id="text-orgf77ee49">
+<div id="outline-container-org76db5ea" class="outline-2">
+<h2 id="org76db5ea">makefile</h2>
+<div class="outline-text-2" id="text-org76db5ea">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -388,7 +389,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-03 Fri 19:35</p>
+<p class="date">Created: 2022-06-03 Fri 22:39</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
