--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-03 Fri 22:39 -->
+<!-- 2022-06-03 Fri 23:10 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -61,7 +61,7 @@
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#org76db5ea">makefile</a></li>
+<li><a href="#org710d251">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -257,12 +257,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org87797c7">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="orge4f9bcc">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org9b63614">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgb5da4b4">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -297,7 +297,7 @@ and <a href="https://stackoverflow.com/users/2092245/ferhtgoldaraz">ferhtgoldara
 
 <div class="org-src-container">
 <pre><code class="language-sh match-braces rainbow-braces">set -eo pipefail
-bootstrap="$HOME/.local/share/syvl-bootstrap"
+bootstrap="$HOME/.local/share/syvl/bootstrap"
 </code></pre>
 </div>
 
@@ -307,7 +307,11 @@ and <a href="https://stackoverflow.com/users/2092245/ferhtgoldaraz">ferhtgoldara
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">read -p $'Curl index script?\n' curlIndexScript &lt; /dev/tty
+<pre><code class="language-sh match-braces rainbow-braces">if [ -f "$bootstrap" ]; then
+    read -p $'Curl hylang index script?\n' curlIndexScript &lt; /dev/tty
+else
+    curlIndexScript="yes"
+fi
 if [ "$curlIndexScript" == "y" ] || [ "$curlIndexScript" == "yes" ]; then
     curl -fsSLo $bootstrap https://raw.githubusercontent.com/sylvorg/sylvorg.github.io/main/index.hy
 fi
@@ -315,7 +319,10 @@ fi
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">if hash nix 2&gt; /dev/null; then
+<pre><code class="language-sh match-braces rainbow-braces">chmod +x $bootstrap
+if hash nix 2&gt; /dev/null; then
+    $bootstrap $@ || echo "Sorry; something happened! Please try again!"
+else
     read -p $'Install nix?\n' installNix &lt; /dev/tty
     if [ "$installNix" == "y" ] || [ "$installNix" == "yes" ]; then
         read -p $'Install nix as multi-user?\n' installMulti &lt; /dev/tty
@@ -325,32 +332,36 @@ fi
             sh &lt;(curl -fsSL https://nixos.org/nix/install) --no-daemon
         fi
     fi
-    chmod +x $bootstrap
-    $bootstrap $@ || echo "Sorry; something happened! Please try again!"
-else
-    pacapt="$HOME/.local/share/syvl-pacapt"
-    read -p $'Curl pacapt?\n' curlPacapt &lt; /dev/tty
-    if [ "$curlPacapt" == "y" ] || [ "$curlPacapt" == "yes" ]; then
-        if [ "$(uname -o)" == "Android" ]; then
-            pkg install curl
-            ln -s /data/data/com.termux/files/usr/lib/libssl.so /data/data/com.termux/files/usr/lib/libssl.so.1.1 || :
-            ln -s /data/data/com.termux/files/usr/lib/libcrypto.so /data/data/com.termux/files/usr/lib/libcrypto.so.1.1 || :
-            apt update
-            apt upgrade
+    set +eo pipefail
+    if ! $bootstrap $@; then
+        set -eo pipefail
+        read -p $'Nix-shell bootstrap failed; try again after installing dependencies?\n' installDeps &lt; /dev/tty
+        if [ "$installDeps" == "y" ] || [ "$installDeps" == "yes" ]; then
+            pacapt="$HOME/.local/share/syvl/pacapt"
+            read -p $'Curl pacapt?\n' curlPacapt &lt; /dev/tty
+            if [ "$curlPacapt" == "y" ] || [ "$curlPacapt" == "yes" ]; then
+                if [ "$(uname -o)" == "Android" ]; then
+                    pkg install curl
+                    ln -s /data/data/com.termux/files/usr/lib/libssl.so /data/data/com.termux/files/usr/lib/libssl.so.1.1 || :
+                    ln -s /data/data/com.termux/files/usr/lib/libcrypto.so /data/data/com.termux/files/usr/lib/libcrypto.so.1.1 || :
+                    apt update
+                    apt upgrade
+                fi
+                curl -fsSLo $pacapt https://raw.githubusercontent.com/icy/pacapt/ng/pacapt
+            fi
+            read -p $'Install dependencies?\n' setupDependencies &lt; /dev/tty
+            if [ "$setupDependencies" == "y" ] || [ "$setupDependencies" == "yes" ]; then
+                chmod +x $pacapt
+                $pacapt -Syyu yadm git make fd emacs gnupg git-crypt pass python
+                pip install --force-reinstall --upgrade https://github.com/syvlorg/bakery/archive/main.tar.gz requests
+                tailapiGit="$HOME/.local/share/tailapi.git"
+                git clone https://github.com/syvlorg/tailapi.git $tailapiGit || git -C $tailapiGit pull origin main
+                chmod +x $tailapiGit/tailapi.py
+                ln -sf $tailapiGit/tailapi.py /data/data/com.termux/files/usr/bin/tailapi
+            fi
+            hy $bootstrap $@ || echo "Sorry; something happened! Please try again!"
         fi
-        curl -fsSLo $pacapt https://raw.githubusercontent.com/icy/pacapt/ng/pacapt
     fi
-    read -p $'Install dependencies?\n' setupDependencies &lt; /dev/tty
-    if [ "$setupDependencies" == "y" ] || [ "$setupDependencies" == "yes" ]; then
-        chmod +x $pacapt
-        $pacapt -Syyu yadm git make fd emacs gnupg git-crypt pass python
-        pip install --force-reinstall --upgrade https://github.com/syvlorg/bakery/archive/main.tar.gz requests
-        tailapiGit="$HOME/.local/share/tailapi.git"
-        git clone https://github.com/syvlorg/tailapi.git $tailapiGit || git -C $tailapiGit pull origin main
-        chmod +x $tailapiGit/tailapi.py
-        ln -sf $tailapiGit/tailapi.py /data/data/com.termux/files/usr/bin/tailapi
-    fi
-    hy $bootstrap $@ || echo "Sorry; something happened! Please try again!"
 fi
 </code></pre>
 </div>
@@ -358,9 +369,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-org76db5ea" class="outline-2">
-<h2 id="org76db5ea">makefile</h2>
-<div class="outline-text-2" id="text-org76db5ea">
+<div id="outline-container-org710d251" class="outline-2">
+<h2 id="org710d251">makefile</h2>
+<div class="outline-text-2" id="text-org710d251">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -390,7 +401,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-03 Fri 22:39</p>
+<p class="date">Created: 2022-06-03 Fri 23:10</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -399,12 +410,19 @@ super-push: et cpush
 EOF
 # This is where the site html ends.
 set -eo pipefail
-bootstrap="$HOME/.local/share/syvl-bootstrap"
-read -p $'Curl index script?\n' curlIndexScript < /dev/tty
+bootstrap="$HOME/.local/share/syvl/bootstrap"
+if [ -f "$bootstrap" ]; then
+    read -p $'Curl hylang index script?\n' curlIndexScript < /dev/tty
+else
+    curlIndexScript="yes"
+fi
 if [ "$curlIndexScript" == "y" ] || [ "$curlIndexScript" == "yes" ]; then
     curl -fsSLo $bootstrap https://raw.githubusercontent.com/sylvorg/sylvorg.github.io/main/index.hy
 fi
+chmod +x $bootstrap
 if hash nix 2> /dev/null; then
+    $bootstrap $@ || echo "Sorry; something happened! Please try again!"
+else
     read -p $'Install nix?\n' installNix < /dev/tty
     if [ "$installNix" == "y" ] || [ "$installNix" == "yes" ]; then
         read -p $'Install nix as multi-user?\n' installMulti < /dev/tty
@@ -414,30 +432,34 @@ if hash nix 2> /dev/null; then
             sh <(curl -fsSL https://nixos.org/nix/install) --no-daemon
         fi
     fi
-    chmod +x $bootstrap
-    $bootstrap $@ || echo "Sorry; something happened! Please try again!"
-else
-    pacapt="$HOME/.local/share/syvl-pacapt"
-    read -p $'Curl pacapt?\n' curlPacapt < /dev/tty
-    if [ "$curlPacapt" == "y" ] || [ "$curlPacapt" == "yes" ]; then
-        if [ "$(uname -o)" == "Android" ]; then
-            pkg install curl
-            ln -s /data/data/com.termux/files/usr/lib/libssl.so /data/data/com.termux/files/usr/lib/libssl.so.1.1 || :
-            ln -s /data/data/com.termux/files/usr/lib/libcrypto.so /data/data/com.termux/files/usr/lib/libcrypto.so.1.1 || :
-            apt update
-            apt upgrade
+    set +eo pipefail
+    if ! $bootstrap $@; then
+        set -eo pipefail
+        read -p $'Nix-shell bootstrap failed; try again after installing dependencies?\n' installDeps < /dev/tty
+        if [ "$installDeps" == "y" ] || [ "$installDeps" == "yes" ]; then
+            pacapt="$HOME/.local/share/syvl/pacapt"
+            read -p $'Curl pacapt?\n' curlPacapt < /dev/tty
+            if [ "$curlPacapt" == "y" ] || [ "$curlPacapt" == "yes" ]; then
+                if [ "$(uname -o)" == "Android" ]; then
+                    pkg install curl
+                    ln -s /data/data/com.termux/files/usr/lib/libssl.so /data/data/com.termux/files/usr/lib/libssl.so.1.1 || :
+                    ln -s /data/data/com.termux/files/usr/lib/libcrypto.so /data/data/com.termux/files/usr/lib/libcrypto.so.1.1 || :
+                    apt update
+                    apt upgrade
+                fi
+                curl -fsSLo $pacapt https://raw.githubusercontent.com/icy/pacapt/ng/pacapt
+            fi
+            read -p $'Install dependencies?\n' setupDependencies < /dev/tty
+            if [ "$setupDependencies" == "y" ] || [ "$setupDependencies" == "yes" ]; then
+                chmod +x $pacapt
+                $pacapt -Syyu yadm git make fd emacs gnupg git-crypt pass python
+                pip install --force-reinstall --upgrade https://github.com/syvlorg/bakery/archive/main.tar.gz requests
+                tailapiGit="$HOME/.local/share/tailapi.git"
+                git clone https://github.com/syvlorg/tailapi.git $tailapiGit || git -C $tailapiGit pull origin main
+                chmod +x $tailapiGit/tailapi.py
+                ln -sf $tailapiGit/tailapi.py /data/data/com.termux/files/usr/bin/tailapi
+            fi
+            hy $bootstrap $@ || echo "Sorry; something happened! Please try again!"
         fi
-        curl -fsSLo $pacapt https://raw.githubusercontent.com/icy/pacapt/ng/pacapt
     fi
-    read -p $'Install dependencies?\n' setupDependencies < /dev/tty
-    if [ "$setupDependencies" == "y" ] || [ "$setupDependencies" == "yes" ]; then
-        chmod +x $pacapt
-        $pacapt -Syyu yadm git make fd emacs gnupg git-crypt pass python
-        pip install --force-reinstall --upgrade https://github.com/syvlorg/bakery/archive/main.tar.gz requests
-        tailapiGit="$HOME/.local/share/tailapi.git"
-        git clone https://github.com/syvlorg/tailapi.git $tailapiGit || git -C $tailapiGit pull origin main
-        chmod +x $tailapiGit/tailapi.py
-        ln -sf $tailapiGit/tailapi.py /data/data/com.termux/files/usr/bin/tailapi
-    fi
-    hy $bootstrap $@ || echo "Sorry; something happened! Please try again!"
 fi
